# prompt-registry-kit

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/scripts/: capture-screenshots.js
.github/workflows/: ci.yml  pages.yml  portfolio.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
examples/: ci_promote_gate.py  walkthrough.md
registry/customer_complaint_classifier/: golden.json  v1.json  v2.json
registry/meeting_recap/: golden.json  v1.json  v2.json
registry/policy_summary/: golden.json  v1.json  v2.json
src/prompt_registry/: __init__.py  cli.py  evaluator.py  registry.py  runner.py
tests/: test_evaluator.py  test_registry.py  test_runner.py
